# src/main/java/com/dmitryelkin/module_2_5_spring_jwtsec_rest_api/controller/FileControllerV1.java
@@ -38,7 +38,7 @@ public class FileControllerV1 {
         }
     }
 
-    @GetMapping("/{fileName}")
+    @GetMapping("findByName/{fileName}")
     public ResponseEntity<?> getFilesByName(@PathVariable String fileName) {
         InputStream inputStream = service.download(fileName);
 
